<?xml version="1.0" encoding="utf-8"?>

    <androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        app:cardBackgroundColor="#FFFFFFFF"
        app:cardCornerRadius="3dp"
        app:cardElevation="3dp"
        app:contentPadding="5dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorAccent"
            android:orientation="vertical">
            <RelativeLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <ImageView
                    android:id="@+id/image"
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    android:contentDescription="@string/property_image"
                    android:scaleType="centerCrop" />

                <Button
                    android:id="@+id/butText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/fui_idp_button_background_anonymous"
                    android:text="@string/buy_rent" />

            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="0dp"
                android:layout_marginRight="0dp"
                android:layout_marginBottom="0dp">

                <TextView
                    android:id="@+id/price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:text="@string/price"
                    android:textColor="#121111"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/this_city"
                    android:textColor="#121111"
                    android:textSize="20sp"
                    android:visibility="visible"
                    android:layout_toLeftOf="@+id/price"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_toStartOf="@+id/price" />


                <TextView
                    android:id="@+id/town"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/this_town"
                    android:textColor="#121111"
                    tools:visibility="visible"
                    android:layout_below="@id/city" />
                <RelativeLayout

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:id="@+id/relLayout1"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_below="@id/price" >


                    <ImageView
                        android:id="@+id/icon_bed"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:contentDescription="@string/beds_icon"
                        android:src="@drawable/ic_local_hotel_black_24dp"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/beds"
                        android:layout_toEndOf="@id/icon_bed"
                        android:layout_centerVertical="true"
                        android:text="@string/number_of_beds"
                        android:textColor="#121111"
                        android:textSize="13sp"
                        android:layout_marginLeft="10dp"
                        android:layout_toRightOf="@id/icon_bed"
                        android:layout_marginStart="10dp" />



                </RelativeLayout>

            </RelativeLayout>


        </LinearLayout>
    </androidx.cardview.widget.CardView>
