<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/logo_imageview"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="144dp"

        android:layout_marginRight="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/placeadd"
        android:contentDescription="@string/todo"
        android:layout_marginEnd="8dp" />

    <Button
        android:id="@+id/buttonAdd"
        android:layout_width="256dp"
        android:layout_height="42dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/button_shape"
        android:text="@string/place_adds"
        android:textColor="@android:color/primary_text_dark_nodisable"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.539"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_imageview" />

    <TextView
        android:id="@+id/textGrid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:text="@string/place_your_adds_and_see_great_performance"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/logo_imageview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.442"
        app:layout_constraintStart_toStartOf="parent"
        >

    </TextView>

</androidx.constraintlayout.widget.ConstraintLayout>