<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:titleEnabled="true">

            <androidx.viewpager.widget.ViewPager
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/view_pager"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <me.relex.circleindicator.CircleIndicator
                    android:id="@+id/indicator"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"/>
        </androidx.viewpager.widget.ViewPager>

          <!--  <ImageView
                android:id="@+id/detailImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/detail_image"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"
                app:srcCompat="@drawable/chawe" /> -->

            <!-- As our statusBar is transparent below and content is moved behind our toolbar has to include the padding on top so we use this area -->
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="24dp">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="16dp"
                    android:paddingTop="24dp"
                    android:paddingRight="16dp"
                    android:paddingBottom="24dp">

                    <TextView
                        android:id="@+id/tvPrice"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/price"
                        android:textColor="#121111"
                        android:textSize="20sp"
                        android:visibility="visible"

                       android:textAppearance="@style/TextAppearance.AppCompat.Title" />
                    <Space
                        android:layout_width="1dp"
                        android:layout_height="10dp"/>
                    <TextView
                        android:id="@+id/address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/property_address"
                        android:textColor="#4E4D4D"
                        android:textSize="15sp"
                        android:visibility="visible"
                        />
                    <Space
                        android:layout_width="1dp"
                        android:layout_height="10dp"/>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="0dp"
                        android:layout_marginTop="0dp"
                        android:layout_marginRight="0dp"
                        android:layout_marginBottom="0dp">

                    <TextView
                        android:id="@+id/numBaths"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:text="@string/Bath"
                        android:textColor="#FF4E4D4D"
                        android:textSize="15sp"
                        android:layout_marginEnd="200dp"
                        android:layout_marginRight="200dp" />

                        <TextView
                            android:id="@+id/tvType"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentRight="true"
                            android:text="@string/house_type"
                            android:textColor="#FF4E4D4D"
                            android:textSize="15sp"
                            android:layout_marginEnd="100dp"
                            android:layout_marginRight="100dp" />

                    <TextView
                        android:id="@+id/numBeds"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Beds"
                        android:textColor="#FF4E4D4D"
                        android:textSize="15sp"
                        android:visibility="visible"
                        android:layout_toLeftOf="@+id/numBaths"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentLeft="true"
                        android:layout_toStartOf="@+id/numBaths"
                        />

                    </RelativeLayout>


                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="16dp"
                    android:paddingTop="24dp"
                    android:paddingRight="16dp"
                    android:paddingBottom="24dp">

                    <RelativeLayout

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/relLayout1"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        >


                        <ImageView
                            android:id="@+id/icon_views"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:contentDescription="@string/beds_icon"
                            android:src="@drawable/ic_remove_red_eye_black_24dp"
                            android:scaleType="centerCrop"
                            />

                        <TextView
                            android:id="@+id/beds"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:layout_marginStart="160dp"
                            android:layout_marginLeft="150dp"
                            android:layout_toEndOf="@id/icon_views"
                            android:layout_toRightOf="@id/icon_views"
                            android:text="@string/days_left"
                            android:textAppearance="@style/TextAppearance.AppCompat.Large"
                            android:textColor="#535151"
                            android:textSize="20sp" />



                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/relLayout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        >



                        <TextView
                            android:id="@+id/tvViews"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/number_of_view"
                            android:textColor="#FF4E4D4D"
                            android:textSize="13sp"
                            android:scaleType="centerCrop"

                            />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/daysLeft"
                            android:text="@string/daysLeft"
                            android:textColor="#FF4E4D4D"
                            android:textSize="13sp"
                            android:layout_toRightOf="@+id/tvViews"
                            android:layout_marginLeft="150dp"
                            android:layout_centerVertical="true"

                            android:layout_toEndOf="@+id/tvViews"
                            android:layout_marginStart="150dp" />



                    </RelativeLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>



            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="16dp"
                    android:paddingTop="24dp"
                    android:paddingRight="16dp"
                    android:paddingBottom="24dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/property_description"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                    <TextView
                        android:id="@+id/description1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/description2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />


                </LinearLayout>

            </androidx.cardview.widget.CardView>


        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floating_action_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/ic_favorite_black_24dp"
        app:backgroundTint="#03A9F4"
        app:layout_anchor="@id/appbar"
        app:layout_anchorGravity="bottom|right|end" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>